--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,11 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
-        ]
+        ],
+        "vercel": [
+            "@php -v",
+            "npm -v"
+          ]
     },
     "extra": {
         "laravel": {
