--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,10 @@
     "version": 2,
     "functions": {
         "api/index.php":
-        { "runtime": "vercel-php@0.5.2" }
+        {
+            "runtime": "vercel-php@0.5.2",
+            "memory": 3008
+        }
     },
     "routes": [{
         "src": "/(.*)",
